# education

./: .gitignore  CMakeLists.txt  README.md
include/: data.h
src/: CMakeLists.txt  plus.cpp  sudoku.cpp
